2004-03-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wtypes.h (DECIMAL_SETZERO): Add definition for
	NONAMELESSUNION case.

2004-03-03  Martin Fuchs  <martin-fuchs@gmx.net>

	* include/oleauto.h (V_UNION, V_VT, V_DECIMAL): Use
	__VARIANT_NAME_ constants.

2004-03-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/uxtheme.h: Include <commctrl.h>

2004-03-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/basetyps.h (GUID_SECT): Define to nothimg for GCC >= 2.95.

2004-03-02  Martin Fuchs  <martin-fuchs@gmx.net>

	* include/oleauto.h (VAR_VALIDDATE, VAR_FORMAT_NOSUBSTITUTE,
	VAR_FOURDIGITYEARS) Define new constants. Group VAR_*  defines
	together.
	(V_UI2, V_UI4, V_UI4REF, V_UI, V_UI8REF) Define macros.
	(V_I8, V_I8REF): Correct macros.
	(V_DECIMAL): Correct macro deginitions.
	(V_INT_PTR, V_UINT_PTR, V_INT_PTRREF, V_UINT_PTRREF): Define
	constants.
	(VTBIT_*): Define constants.
	(UDATE): Add structure definition.
	(VarDateFromUdate, VarDateFromUdateEx, VarUdateFromDate): Declare
	functions.
	(SafeArrayCreateVector): Correct parameter type from UINT to ULONG
	(SafeArrayCreateVectorEx): Declare function.
	(Var*): declare VARIANT manipulation functions.
	* include/ocidl.h (IPicture_*): Define IPicture COBJ macros.
	* include/oaidl.h (IRecordInfo_*): Define IRecordInfo COBJ
	macros.

2004-03-01  Martin Fuchs  <martin-fuchs@gmx.net>

	* include/oaidl.h (FADF_*) Define missing constants.
	(IDispatch_*): Define COBJ macros.
	(VARIANT): Add missing union members llVal and ullVal.
	(wireVARIANT): Likewise.
	(ITypeinfo_*): Define COBJ macros.
	* include/oleauto.h (Var*FromDisp): Correct parameter type from
	LPDISPATCH* to LPDISPATCH.
	(VARCMP_*, VAR_LOCALBOOL, LOCALE_USE_NLS, VARIANT_*,
	VAR_CALENDAR_*): Add missing constants.
	(SafeArray[Get/Set]*): Add prototypes.
	(Var*From*):  Add missing prototypes.
	(NUMPRS_*): Add defines.
	(NUMPARSE): Define structure.
	(VarParseNumFromStr,VarNumFromParseNum): Add prototypes.