@@ -95,7 +95,7 @@ typedef HW_DMA_RETURN
   if (VideoPortGetCurrentIrql() > 1 /* APC_LEVEL */) \
   { \
     VideoPortDebugPrint(Error, "Video: Pageable code called at IRQL %d\n", VideoPortGetCurrentIrql() ); \
-    assert(FALSE); \
+    ASSERT(FALSE); \
   }
 
 #else
